fixtures/frontend/milestone-2/invalid/unknown-decorator/main.aivi
@mystery
val title = "Milestone 2"
